--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.delete{
+  margin-left: 2rem;
+}
