--- a/routing/src/index.css
+++ b/routing/src/index.css
@@ -14,3 +14,14 @@ code {
 .delete{
   margin-left: 2rem;
 }
+.home .post img{
+  position: absolute;
+  top: 20px;
+  left: -100px;
+  opacity: .6;
+
+}
+.home .post {
+  overflow: hidden;
+  padding-left: 5.5rem; 
+}
